--- a/setup.cfg
+++ b/setup.cfg
@@ -21,14 +21,14 @@ include_package_data = True
 package_dir =
     = src
 packages = find_namespace:
-python_requires = >=3.8,!=3.9.7,<3.11
+python_requires = >=3.8,!=3.9.7,<3.14
 
 install_requires =
     numpy>=1.20
     scipy>=1.4.1
-    sympy>=1.5,<=1.9
+    sympy>=1.5
     cmake>=3.18
-    qulacs~=0.5.0
+    qulacs>=0.5.0
     orquestra-quantum
 
 
